@@ -3,6 +3,9 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.13...]
+### 2019-07-29
+	Fixed: Power and Process debug were not available properly.
+	Added: Exclsuive mode is tracked in process debug.
 ### 2019-07-27
 	Fixed: Foreground hang detector was not updating what program was last hung.
 	Added: Experimental loader display UI. Currently unusable. Early experimentation discouraging.
